@@ -102,6 +102,8 @@
 
 * Emulates Spec-Mate
 
+* Emulates Phoenix
+
 * Emulates Datagear/MB02 DMA, ZX-Uno DMA
 
 * Emulates +3 Disk
