@@ -102,6 +102,8 @@
 
 * Emula Spec-Mate
 
+* Emula Phoenix
+
 * Emula Datagear/MB02 DMA, ZX-Uno DMA
 
 * Emula Disco +3
