@@ -120,10 +120,7 @@ que tiene una funcion de entrada asociada. como indicar esto? en un parámetro d
 https://worldofspectrum.net/pub/sinclair/games-info/d/Discopack+3.pdf
 
 phoenix
-specmate 1 y 2:  http://projectspeccy.com/projects/
 dynamid 3
 
-specmate: esquematico es de specmate v2. pero la rom quiza es v1? 
--en debug blocks indicar si specmate mapeado
  
 - ajustar memory zones para zx81: rom deberia ser 8kb. revisar tambien zx80
