@@ -142,6 +142,7 @@
 #include "transtape.h"
 #include "mhpokeador.h"
 #include "specmate.h"
+#include "phoenix.h"
 
 #ifdef COMPILE_STDOUT
 #include "scrstdout.h"
@@ -1367,7 +1368,11 @@ util_stats_init();
 
 	if (specmate_enabled.v) {
 		specmate_reset();
-	}      
+	}
+
+	if (phoenix_enabled.v) {
+		phoenix_reset();
+	}          
 
 	//Inicializar zona memoria de debug
 	debug_memory_zone_debug_reset();
@@ -3533,6 +3538,7 @@ void set_machine_params(void)
         multiface_enabled.v=0;
         transtape_enabled.v=0;
         specmate_enabled.v=0;
+        phoenix_enabled.v=0;
 
 		plus3dos_traps.v=0;
 		pd765_enabled.v=0;
