@@ -141,6 +141,7 @@
 #include "transtape.h"
 #include "mhpokeador.h"
 #include "specmate.h"
+#include "phoenix.h"
 
 #ifdef COMPILE_ALSA
 #include "audioalsa.h"
@@ -256,6 +257,7 @@ int hilow_barbanegra_opcion_seleccionada=0;
 int transtape_opcion_seleccionada=0;
 int mhpokeador_opcion_seleccionada=0;
 int specmate_opcion_seleccionada=0;
+int phoenix_opcion_seleccionada=0;
 
 
 
@@ -32036,6 +32038,60 @@ void menu_specmate(MENU_ITEM_PARAMETERS)
 
 }
 
+void menu_hardware_phoenix_enable(MENU_ITEM_PARAMETERS)
+{
+    if (phoenix_enabled.v) {
+        phoenix_disable();
+    }
+    else {
+        phoenix_enable();
+    }
+}
+
+
+
+void menu_phoenix(MENU_ITEM_PARAMETERS)
+{
+    menu_item *array_menu_common;
+    menu_item item_seleccionado;
+    int retorno_menu;
+    do {
+
+            
+
+        menu_add_item_menu_inicial_format(&array_menu_common,MENU_OPCION_NORMAL,menu_hardware_phoenix_enable,
+                NULL,"[%c] ~~Phoenix Enabled", (phoenix_enabled.v ? 'X' : ' '));
+        menu_add_item_menu_shortcut(array_menu_common,'p');
+        menu_add_item_menu_tooltip(array_menu_common,"Enable Phoenix");
+        menu_add_item_menu_ayuda(array_menu_common,"Enable Phoenix");
+
+
+
+
+        menu_add_item_menu(array_menu_common,"",MENU_OPCION_SEPARADOR,NULL,NULL);
+
+        menu_add_ESC_item(array_menu_common);
+
+        retorno_menu=menu_dibuja_menu(&phoenix_opcion_seleccionada,&item_seleccionado,array_menu_common,"Phoenix emulation");
+
+
+        if ((item_seleccionado.tipo_opcion&MENU_OPCION_ESC)==0 && retorno_menu>=0) {
+            //llamamos por valor de funcion
+                if (item_seleccionado.menu_funcion!=NULL) {
+                //printf ("actuamos por funcion\n");
+                item_seleccionado.menu_funcion(item_seleccionado.valor_opcion);
+
+            }
+        }
+
+    } while ( (item_seleccionado.tipo_opcion&MENU_OPCION_ESC)==0 && retorno_menu!=MENU_RETORNO_ESC && !salir_todos_menus);
+
+
+
+
+}
+
+
 
 void menu_hardware_mhpokeador_enable(MENU_ITEM_PARAMETERS)
 {
@@ -32358,6 +32414,10 @@ void menu_storage_copy_devices(MENU_ITEM_PARAMETERS)
         menu_add_item_menu_format(array_menu_common,MENU_OPCION_NORMAL,menu_multiface,NULL,"~~Multiface");
         menu_add_item_menu_shortcut(array_menu_common,'m');
         menu_add_item_menu_tiene_submenu(array_menu_common);
+
+        menu_add_item_menu_format(array_menu_common,MENU_OPCION_NORMAL,menu_phoenix,NULL,"P~~hoenix");
+        menu_add_item_menu_shortcut(array_menu_common,'h');
+        menu_add_item_menu_tiene_submenu(array_menu_common);        
 
         menu_add_item_menu_format(array_menu_common,MENU_OPCION_NORMAL,menu_specmate,NULL,"~~Spec-Mate");
         menu_add_item_menu_shortcut(array_menu_common,'s');
