@@ -39,6 +39,7 @@
 #include "transtape.h"
 #include "mhpokeador.h"
 #include "specmate.h"
+#include "phoenix.h"
 
 
 //#define ZESARUX_ZXI_PORT_REGISTER 0xCF3B
@@ -348,7 +349,11 @@ void nmi_handle_pending_prepost_fetch(void)
 
     if (specmate_enabled.v) {
         specmate_nmi();
-    }        
+    }
+
+    if (phoenix_enabled.v) {
+        phoenix_nmi();
+    }            
 
 }
 
@@ -432,7 +437,12 @@ void generate_nmi_prepare_fetch(void)
     if (specmate_enabled.v) {
         nmi_pending_pre_opcode=1;
         nmi_pending_post_opcode=0;
-    }      
+    }
+
+    if (phoenix_enabled.v) {
+        nmi_pending_pre_opcode=1;
+        nmi_pending_post_opcode=0;
+    }          
 
 }
 
